--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                 </p>
                 <h1>What is Machine Learning? </h1>
                 <b>It is a technique for building a computer program that learns from data</b>
-            
+            <br>
+                <h2>How does it work?</h2>
+                <h4>loading animation</h4>
+        <div id="wrapper"><div></div></div>
             </section>
         </main><!-- .main-area -->
     </div><!-- .content -->
