--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header class="masthead">
         <div class="site-branding">
-            <h1 class="site-title"><a href="index.html">Isaac Alvarado</a></h1>
+            <h1 class="site-title"><a href="index.html">Isaac Alvarado - Home</a></h1>
         </div><!-- .site-title -->
         <nav id="site-navigation" class="main-navigation" role="navigation">
             <!-- Mobile menu toggle button -->
@@ -27,7 +27,9 @@
                     <li class="menu-item current-menu-item"><a href="projects.html">Projects</a>
                         
                     </li>
-                    <li class="menu-item"><a target="_blank" href="contact.html">Contact</a></li>
+                    <li class="menu-item current-menu-item"><a href="gallery.html">Gallery</a></li>
+                    <li class="menu-item current-menu-item"><a href="contact.html">Contact</a></li>
+                    
             </ul></div>
         </nav>
     </header><!-- .masthead -->
