--- a/gallery.html
+++ b/gallery.html
@@ -9,6 +9,8 @@
     <meta name="description" content="Portfolio"/>
 
     <link rel="stylesheet" href="style.css" type="text/css" media="all">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
+
 </head>
 
 <body>
