--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,8 @@
                     <li class="menu-item current-menu-item"><a href="index.html">Home</a></li>
                     <li class="menu-item current-menu-item"><a href="project.html">Projects</a>
                         
-                    </li>                    
+                    </li>
+                    <li class="menu-item current-menu-item"><a href="kids.html">kids</a></li>                    
                     <li class="menu-item current-menu-item"><a href="gallery.html">Gallery</a></li>
 
                     <li class="menu-item"><a target="_blank" href="#">Contact</a></li>
