--- a/gallery.html
+++ b/gallery.html
@@ -30,6 +30,7 @@
                         
                     </li>
                     <li class="menu-item current-menu-item"><a href="gallery.html">Gallery</a></li>
+                    <li class="menu-item current-menu-item"><a href="kids.html">kids</a></li>
                     <li class="menu-item current-menu-item"><a href="contact.html">Contact</a></li>
                     
             </ul></div>
